# hermes-sre-toolkit

./: README.md  SBOM.json  pyproject.toml
skills/gitea-agentic-workflow/: SKILL.md
skills/gitea-agentic-workflow/references/: gitea-local-audit-pattern.md  gitea-repo-discovery-2026-05.md  local-merge-rebuild-incident-flow.md  sync-sh-behavior.md
skills/kanban-orchestrator/: SKILL.md
skills/kanban-worker/: SKILL.md
skills/rollback-smoke-report/: SKILL.md
skills/runtime-change-guard/: SKILL.md
skills/runtime-change-guard/references/: lang-guard-prevent.md
skills/secret-safety/: SKILL.md
skills/sre-architect-release/: SKILL.md
skills/sre-architect-release/references/: modular-repo-pattern-entry-points-2026-06.md  modular-repos-bootstrap-from-existing-2026-06.md  release-stabilization-recipes-2026-06.md  runtime-drift-detection-2026-06.md  sre-recipes-release-stabilization-2026-06.md
skills/sre-mining-reconcile/: SKILL.md
skills/sre-mining-reconcile/references/: audit-hermes-jarvis-2026-06.md
skills/sre-release-gates/: SKILL.md
skills/sre-toolkit/: SKILL.md
src/hermes_sre_toolkit/: __init__.py  config.py  plugin.py
tests/: test_smoke.py
